# human-vs-agent-engine

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: evaluation.json
docs/: AGENT_TOWN.md  ARCHITECTURE.md  BLIND_NATURALNESS_EVAL.md  CHARACTER_CARDS.md  EVALUATION.md  FACT_GRAPH.md  IMPLICIT_CONTROL.md  INTERVIEW_MOD.md  LLM_INTEGRATION.md  MEMORY.md  MVP10_DOU_E_LLM_TEST.md  NARRATIVE_CHARACTER_CALIBRATION.md  RESEARCH_HUMAN_LIKE_AGENTS.md  SOCIAL_MEDIA.md  STRATEGIC_INFLUENCE.md  WORLD_PERSISTENCE.md
godot/: main.gd  main.tscn  project.godot  town_world.gd
src/hva_engine/: __init__.py  agent_runtime.py  api.py  benchmark.py  blind_eval.py  causal_events.py  character_cards.py  character_dynamics.py  cognition.py  context.py  danmaku.py  engine.py  evaluation.py  fact_graph.py  fact_store.py  human_cognition.py  llm.py  llm_smoke.py  llm_step_debug.py  memory_store.py  models.py  narrative_calibration.py  observation.py  relationship_memory.py  skill_learning.py  social_influence.py  social_media.py  speech_style.py  (+3 more)
tests/: test_api.py  test_blind_eval.py  test_character_cards.py  test_context.py  test_engine.py  test_fact_graph.py  test_godot_town.py  test_human_cognition.py  test_llm_smoke.py  test_llm_step_debug.py  test_memory_store.py  test_mvp11.py  test_narrative_calibration.py  test_relationship_memory.py  test_skill_learning.py  test_social_influence.py  test_social_media.py  test_stimulus.py  test_town.py  test_town_naturalness_calibration.py  test_world_store.py
(+17 files in other folders)
