[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "human-vs-agent-engine"
version = "0.1.0"
description = "Evaluation-first engine for human-vs-AI strategy game mods"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pydantic>=2.8,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
neo4j = [
  "neo4j>=5.20,<6",
]
dev = [
  "pytest>=8.2,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
]

[project.scripts]
hva-benchmark = "hva_engine.benchmark:main"
hva-llm-smoke = "hva_engine.llm_smoke:main"
hva-llm-step-debug = "hva_engine.llm_step_debug:main"
hva-narrative-calibration = "hva_engine.narrative_calibration:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hva_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
